@@ -11,6 +11,7 @@ view.engine    = "Layouts"
 view.useLayout = "default"
 
 [development]
+db.autoconnect     = 1
 db.adapter         = "PDO_Mysql"
 db.params.host     = "locahost"
 db.params.username = "example"
